<resources>
    <string name="pingly_app_label">Pingly</string>
    <string name="main_dash_icon_probe_list">Probes</string>
    <string name="main_dash_icon_probe_new">New Probe</string>
    <string name="main_dash_icon_schedule">Scheduler</string>
    <string name="main_dash_icon_settings">Settings</string>
    <string name="pingly_about_apptitle">Pingly</string>
    <string name="pingly_about_version_fmt">Version: %1$s</string>
    <string name="pingly_about_author">Author: Barry O\'Neill</string>
    <string name="pingly_about_disclaimer">This software comes with no warranty either expressed or implied. I am not
        responsible for any damages that may result from the use of this software, including but not limited to:
        monetary loss, data loss, emotional and mental distress, loss of use, bed wetting, premature hair loss or
        spontaneous combustion.
    </string>
    <string name="activity_dashboard">Pingly</string>
    <string name="activity_probe_list">Probes</string>
    <string name="activity_probe_detail">Probe Detail</string>
    <string name="activity_probe_runner">Probe Runner</string>
    <string name="activity_probe_run_history">Probe Run History</string>
    <string name="activity_schedule_list">Probe Run Schedule</string>
    <string name="activity_schedule_detail">Probe Schedule Detail</string>
    <string name="activity_settings">Pingly Settings</string>
    <string name="service_schedule_label">Pingly Scheduler Service</string>
    <string name="service_interactive_label">Pingly Probe Runner Service</string>
    <string name="prefs_category_proberun">Probe Runner Settings</string>
    <string name="prefs_category_notification">Notification Preferences</string>
    <string name="prefs_category_misc">Miscellaneous</string>
    <string name="prefs_key_FIRST_RUN_COMPLETE">FIRST_RUN_COMPLETE</string>
    <string name="prefs_key_PROBERUN_HIST_SIZE">PROBERUN_HIST_SIZE</string>
    <string name="prefs_key_NOTIFICATION_SOUND">NOTIFICATION_SOUND</string>
    <string name="prefs_key_NOTIFICATION_ALLOW_VIBRATE">NOTIFICATION_ALLOW_VIBRATE</string>
    <string name="prefs_key_ABOUT_PINGLY">ABOUT_PINGLY</string>
    <string name="prefs_proberun_histsize_title">Per-Probe History Size</string>
    <string name="prefs_proberun_histsize_summary">The larger this value, the more storage space will be required
        (depending on frequency and output). Takes effect on a probe\'s next run.
    </string>
    <string name="prefs_proberun_histsize_hint">Between %1$s and %2$s</string>
    <string name="prefs_notification_sound_title">Notification Sound</string>
    <string name="prefs_notification_sound_summary">Select the notification sound</string>
    <string name="prefs_notification_allowvibrate_title">Vibrate on Notification</string>
    <string name="prefs_notification_allowvibrate_summaryOn">Vibrations are enabled</string>
    <string name="prefs_notification_allowvibrate_summaryOff">Vibrations are disabled</string>
    <string name="prefs_about_title">About Pingly</string>
    <string name="prefs_about_summary">Click for information about Pingly</string>
    <string name="toast_schedule_deactivated">Schedule for probe \'%1$s\' disabled</string>
    <string name="toast_schedule_activated">Schedule for probe \'%1$s\' activated</string>
    <string name="toast_schedule_deleted">Schedule for probe \'%1$s\' deleted</string>
    <string name="toast_schedule_added">Schedule for \'%1$s\' successfully created</string>
    <string name="toast_schedule_updated">Schedule for \'%1$s\' successfully updated</string>
    <string name="toast_probe_added">Probe \'%1$s\' successfully created</string>
    <string name="toast_probe_updated">Probe \'%1$s\' successfully updated</string>
    <string name="toast_probe_deleted">Probe \'%1$s\' deleted</string>
    <string name="probe_runner_status_inactive">Inactive</string>
    <string name="probe_runner_status_running">Running</string>
    <string name="probe_runner_status_success">Success</string>
    <string name="probe_runner_status_failed">Failed</string>
    <string name="probe_list_context_edit">Edit Probe</string>
    <string name="probe_list_context_run">Run Now</string>
    <string name="probe_list_context_schedule">Create Schedule</string>
    <string name="probe_list_context_history">View Run History</string>
    <string name="probe_list_context_delete">Delete Probe</string>
    <string name="probe_list_emptymsg">No Probes Configured</string>
    <string name="probe_list_addbutton">Create A Probe</string>
    <string name="probe_history_list_emptymsg">No Run History for this Probe</string>
    <string name="probe_history_list_runbut">Run Now</string>
    <string name="probe_history_list_runType_scheduled">Scheduled</string>
    <string name="probe_history_list_runType_manual">Manual Start</string>
    <string name="probe_type_PING_name">Ping</string>
    <string name="probe_type_PING_desc">Perform an ICMP Ping</string>
    <string name="probe_type_PING_icontxt">ping</string>
    <string name="probe_type_SOCK_CONN_name">Socket Connection</string>
    <string name="probe_type_SOCK_CONN_desc">Make a simple socket connection</string>
    <string name="probe_type_SOCK_CONN_icontxt">socket</string>
    <string name="probe_type_HTTP_RESP_name">HTTP Response</string>
    <string name="probe_type_HTTP_RESP_desc">Test for a response to a HTTP request</string>
    <string name="probe_type_HTTP_RESP_icontxt">http</string>
    <string name="probe_detail_name">Probe Name</string>
    <string name="probe_detail_name_hint">enter probe name</string>
    <string name="probe_detail_desc">Probe Description</string>
    <string name="probe_detail_desc_hint">enter description</string>
    <string name="probe_detail_type">Probe Type</string>
    <string name="probe_detail_type_hint">choose a type</string>
    <string name="probe_detail_PING_host">Host or IP address</string>
    <string name="probe_detail_PING_host_hint">enter host or IP address</string>
    <string name="probe_detail_PING_packetcount">Packet Count (ping -c)</string>
    <string name="probe_detail_PING_deadline">Deadline in Seconds (ping -w)</string>
    <string name="probe_detail_SOCK_CONN_host">@string/probe_detail_PING_host</string>
    <string name="probe_detail_SOCK_CONN_host_hint">@string/probe_detail_PING_host_hint</string>
    <string name="probe_detail_SOCK_CONN_port">Port Number</string>
    <string name="probe_detail_SOCK_CONN_port_hint">e.g. 80</string>
    <string name="probe_detail_HTTP_RESP_url">URL</string>
    <string name="probe_detail_HTTP_RESP_url_hint">e.g. http://host/blah</string>
    <string name="probe_validation_empty_name">Enter a name</string>
    <string name="probe_validation_empty_host_ip">Specify a hostname or IP address</string>
    <string name="probe_validation_empty_url">A URL is required</string>
    <string name="probe_validation_empty_port">A port number is required</string>
    <string name="probe_validation_duplicate_name">That name is already in use by another probe</string>
    <string name="probe_run_general_err_interrupted">Interrupted: %1$s</string>
    <string name="probe_run_general_err_io">IO Error: %1$s</string>
    <string name="probe_run_core_err_nodataconn">Required active data connection not available, cannot run</string>
    <string name="probe_run_core_err_cancelled">Probe run cancelled</string>
    <string name="probe_run_core_err_internalerr">Internal Error - %1$s : %2$s</string>
    <string name="probe_run_PING_err_unknownhost">Unknown Host: %1$s</string>
    <string name="probe_run_PING_startmsg">Pinging host: %1$s\nWith count=%2$s, deadline=%3$s</string>
    <string name="probe_run_PING_successmsg">Ping Response Received</string>
    <string name="probe_run_PING_failuremsg">Ping Failed</string>
    <string name="probe_run_SOCK_CONN_err_no_url">No URL specified!</string>
    <string name="probe_run_SOCK_CONN_startmsg">Socket connect to host \'%1$s\', port %2$s</string>
    <string name="probe_run_SOCK_CONN_wait_second">Waiting on connect.. %1$s</string>
    <string name="probe_run_SOCK_CONN_successmsg">Connection to \'%1$s\' port %2$s successful</string>
    <string name="probe_run_SOCK_CONN_timeout_failuremsg">Connection to \'%1$s\' port %2$s timed out</string>
    <string name="probe_run_HTTP_RESP_err_no_url">No URL specified!</string>
    <string name="probe_run_HTTP_RESP_err_invalid_url">Invalid URL \'%1$s\': %2$s</string>
    <string name="probe_run_HTTP_RESP_err_unknownhost">Unknown Host: \'%1$s\'</string>
    <string name="probe_run_HTTP_RESP_err_hostconnect">Couldn\'t Connect: %1$s</string>
    <string name="probe_run_HTTP_RESP_reqstart">Starting request to: %1$s</string>
    <string name="probe_run_HTTP_RESP_successmsg">Response Received (Status: %1$s)</string>
    <string name="filler_probe_nologdata"> -- No Log Data -- </string>
    <string name="filler_no_name">[No Name]</string>
    <string name="filler_no_description">[No Description]</string>
    <string name="filler_no_date">[Date n/a]</string>
    <string name="filler_no_time">[Time n/a]</string>
    <string name="filler_no_notes">[No Notes]</string>
    <string name="schedule_list_context_activate">Activate Schedule</string>
    <string name="schedule_list_context_deactivate">Disable Schedule</string>
    <string name="schedule_list_context_edit_schedule">Edit Schedule</string>
    <string name="schedule_list_context_edit_probe">Edit Probe</string>
    <string name="schedule_list_context_history">View Run History</string>
    <string name="schedule_list_context_delete">Delete Schedule</string>
    <string name="schedule_list_emptymsg">No Probes Scheduled</string>
    <string name="schedule_list_addbutton">Schedule A Probe</string>
    <string name="schedule_list_startTime">Start Time: </string>
    <string name="schedule_list_repeat">Repeat: </string>
    <string name="schedule_detail_active_name">Schedule Active?</string>
    <string name="schedule_detail_active_summaryOn">Scheduled entry is active</string>
    <string name="schedule_detail_active_summaryOff">Scheduled entry is active</string>
    <string name="schedule_detail_repetition_name">Repetition</string>
    <string name="schedule_detail_starttime_name">Starts</string>
    <string name="schedule_detail_starttime_onsave">On Save</string>
    <string name="schedule_detail_starttime_later">Later</string>
    <string name="schedule_detail_starttime_dialogtitle">Configure Start Time</string>
    <string name="schedule_detail_starttime_startonsave">Start Immedately on Save</string>
    <string name="schedule_detail_frequency_dialogtitle">Configure Frequency</string>
    <string name="schedule_detail_notify_success_name">Notify On Success?</string>
    <string name="schedule_detail_notify_success_summaryOn">Success notifications enabled</string>
    <string name="schedule_detail_notify_success_summaryOff">Success notifications disabled</string>
    <string name="schedule_detail_notify_failure_name">Notify On Failure?</string>
    <string name="schedule_detail_notify_failure_summaryOn">Failure notifications enabled</string>
    <string name="schedule_detail_notify_failure_summaryOff">Failure notifications disabled</string>
    <string name="probe_notification_success">Successful: \'%1$s\'</string>
    <string name="probe_notification_failure">Failed: \'%1$s\'</string>
    <string name="dialog_probe_delete_title">Delete Probe?</string>
    <string name="dialog_probe_delete_plussched_confirmFmt">Probe \'%1$s\' has scheduler entries,
        these will be stopped &amp; removed as well. Continue?</string>
    <string name="dialog_probe_delete_confirmFmt">Are you sure you want to delete probe \'%1$s\'?</string>
    <string name="dialog_probe_running_title">Probe Running</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save_run">Save &amp; Run</string>
</resources>