<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/prefs_category_proberun">

        <EditTextPreference
                android:key="@string/prefs_key_PROBERUN_HIST_SIZE"
                android:title="@string/prefs_proberun_histsize_title"
                android:summary="@string/prefs_proberun_histsize_summary"
                android:maxLines="1"
                android:inputType="number"
                android:numeric="integer"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefs_category_notification">

        <RingtonePreference
                android:key="@string/prefs_key_NOTIFICATION_SOUND"
                android:title="@string/prefs_notification_sound_title"
                android:summary="@string/prefs_notification_sound_summary"
                android:showDefault="true"
                android:showSilent="true"
                android:ringtoneType="notification" />

        <CheckBoxPreference
                android:key="@string/prefs_key_NOTIFICATION_ALLOW_VIBRATE"
                android:title="@string/prefs_notification_allowvibrate_title"
                android:summaryOn="@string/prefs_notification_allowvibrate_summaryOn"
                android:summaryOff="@string/prefs_notification_allowvibrate_summaryOff"
                android:defaultValue="false"
                />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefs_category_misc">

        <!-- See AboutDialogPreference source documentation for info.
             (blank values for dialog title and button suppresses rendering of those items) -->
        <net.nologin.meep.pingly.view.pref.AboutDialogPreference
                    android:key="@string/prefs_key_ABOUT_PINGLY"
                    android:title="@string/prefs_about_title"
                    android:summary="@string/prefs_about_summary"
                    android:dialogTitle=""
                    android:negativeButtonText=""
                    android:dialogLayout="@layout/pingly_about"
                />


     </PreferenceCategory>
</PreferenceScreen>