<?xml version="1.0" encoding="utf-8"?>
<!--
   Pingly - A simple app for checking for signs of life in hosts/services.
   Copyright 2012 Barry O'Neill

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
<!-- probe list long-press menu -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/probe_list_contextmenu_edit"
          android:title="@string/probe_list_context_edit"/>

    <item android:id="@+id/probe_list_contextmenu_run"
          android:title="@string/probe_list_context_run"/>

    <item android:id="@+id/probe_list_contextmenu_schedule"
          android:title="@string/probe_list_context_schedule"/>

    <item android:id="@+id/probe_list_contextmenu_run_history"
          android:title="@string/probe_list_context_history"/>

    <item android:id="@+id/probe_list_contextmenu_delete"
          android:title="@string/probe_list_context_delete"/>

</menu>