<?xml version="1.0" encoding="utf-8"?>
<!--
   Pingly - A simple app for checking for signs of life in hosts/services.
   Copyright 2012 Barry O'Neill

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

    <LinearLayout
            android:id="@+id/titleBar"
            style="@style/TitleBar"
            android:layout_alignParentTop="true">

        <ImageView style="@style/TitleBarHomeButton" />

        <ImageView style="@style/TitleBarSeparator"/>

        <TextView
                style="@style/TitleBarTitle"
                android:text="@string/activity_probe_detail"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/footerBar"
            android:layout_alignParentBottom="true"
            style="@style/ButtonBar">

        <Button
                android:id="@+id/but_probeDetail_save"
                style="@style/ButtonBarButton"
                android:text="@string/button_save"/>

        <Button
                android:id="@+id/but_probeDetail_saveRun"
                style="@style/ButtonBarButton"
                android:text="@string/button_save_run"/>
        <Button
                android:id="@+id/but_probeDetail_cancel"
                style="@style/ButtonBarButton"
                android:text="@string/button_cancel"/>
    </LinearLayout>

    <!-- new probe form -->
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/footerBar"
            android:layout_below="@id/titleBar"
            android:scrollbars="vertical">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="6dip">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/probe_detail_name"
                    style="@style/FormLabel">
            </TextView>

            <EditText
                    android:id="@+id/probe_detail_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/probe_detail_name_hint"
                    android:inputType="text">
            </EditText>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/probe_detail_desc"
                    style="@style/FormLabel">
            </TextView>

            <EditText
                    android:id="@+id/probe_detail_desc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/probe_detail_desc_hint"
                    android:inputType="text">
            </EditText>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/probe_detail_type"
                    style="@style/FormLabel">
            </TextView>

            <Spinner
                    android:id="@+id/probe_detail_type"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/probe_detail_type_hint">
            </Spinner>

            <LinearLayout
                    android:id="@+id/probe_detail_typespecific_container"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>