<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/relativeLayout1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

    <!-- focusable on layout itself prevents focus on home by default -->
    <LinearLayout
            android:id="@+id/titleBar"
            style="@style/TitleBar"
            android:layout_alignParentTop="true"
            android:focusable="true">

        <ImageView style="@style/TitleBarHomeButton"/>

        <ImageView style="@style/TitleBarSeparator"/>

        <TextView style="@style/TitleBarTitle"
                  android:text="@string/activity_dashboard"/>

    </LinearLayout>


    <LinearLayout style="@style/Dashboard"
                  android:layout_below="@id/titleBar">

        <!--  DASHBOARD TOP ROW  -->
        <LinearLayout style="@style/DashboardColumn">

            <!--  Button: "Show Probes" -->
            <Button
                    android:id="@+id/but_dash_showProbes"
                    style="@style/DashboardButton"
                    android:drawableTop="@drawable/dash_probe_list_selector"
                    android:text="@string/main_dash_icon_probe_list"
                    android:onClick="dashButtonClicked"/>

            <Button
                    android:id="@+id/but_dash_newProbe"
                    style="@style/DashboardButton"
                    android:drawableTop="@drawable/dash_new_probe_selector"
                    android:text="@string/main_dash_icon_probe_new"
                    android:onClick="dashButtonClicked"/>
        </LinearLayout>

        <LinearLayout style="@style/DashboardColumn">

            <Button
                    android:id="@+id/but_dash_schedule"
                    style="@style/DashboardButton"
                    android:drawableTop="@drawable/dash_schedule_selector"
                    android:text="@string/main_dash_icon_schedule"
                    android:onClick="dashButtonClicked"/>

            <Button
                    android:id="@+id/but_dash_settings"
                    style="@style/DashboardButton"
                    android:drawableTop="@drawable/dash_settings_selector"
                    android:text="@string/main_dash_icon_settings"
                    android:onClick="dashButtonClicked"/>
        </LinearLayout>

        <!--  dummy a third, but empty row for spacing  -->
        <LinearLayout style="@style/DashboardColumn"/>

    </LinearLayout>


</RelativeLayout>