<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/relativeLayout1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

    <LinearLayout
            android:id="@+id/titleBar"
            style="@style/TitleBar"
            android:layout_alignParentTop="true">

        <ImageView style="@style/TitleBarHomeButton"/>


        <ImageView style="@style/TitleBarSeparator"/>

        <TextView
                style="@style/TitleBarTitle"
                android:text="@string/activity_schedule_list"/>

        <ImageView style="@style/TitleBarSeparator"/>

        <ImageButton
                android:onClick="createNewSchedule"
                style="@style/TitleBarClickable"
                android:src="@android:drawable/ic_menu_add"/>

    </LinearLayout>


    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/titleBar"
            android:orientation="vertical">

        <ListView
                android:id="@+id/scheduleList"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:drawSelectorOnTop="false">
        </ListView>

        <LinearLayout
                android:id="@+id/emptyListElem"
                style="@style/ListEmptyContainer">
            <TextView
                    android:text="@string/schedule_list_emptymsg"
                    style="@style/ListEmptyMsgTextView"/>
            <Button
                    android:text="@string/schedule_list_addbutton"
                    style="@style/ListEmptyAddButton"
                    android:onClick="createNewSchedule"/>
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>